infra/k8s/base/04-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
    namespace: fleetpulse
    name: redis
spec:
     replicas: 1
     selector:
          matchLabels: 
              app: redis
     template:
           metadata: 
               labels: 
                   app: redis
           spec:
               containers:
                   - name: redis
                     image: redis:6.2.6
                     ports:
                         - containerPort: 6379
                     resources:
                         requests:
                             memory: "256Mi"
                             cpu: "250m"
                         limits:
                             memory: "512Mi"
                             cpu: "500m"                           
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: fleetpulse
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
